kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-1
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 8000
      nodePort: 30007
